--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,8 @@
 PORT=4000
+MONGODB_URI=mongodb+srv://amrut:amrut123@cluster0.4wc3sjx.mongodb.net
+CORS_ORIGIN=http://localhosst:5173
+
+ACCESS_TOKEN_SECRET=freakdevs-invoice
+ACCESS_TOKEN_EXPIRY=1d
+REFRESH_TOKEN_SECRET=freakdevs-invoice
+REFRESH_TOKEN_EXPIRY=10d
