--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,6 @@
-PORT=4000
-MONGODB_URI=mongodb+srv://amrut:amrut123@cluster0.4wc3sjx.mongodb.net
+PORT=8000
+# MONGODB_URI=mongodb+srv://amrut:amrut123@cluster0.4wc3sjx.mongodb.net
+MONGODB_URI=mongodb://127.0.0.1:27017
 CORS_ORIGIN=http://localhosst:5173
 
 ACCESS_TOKEN_SECRET=freakdevs-invoice
