--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,7 @@
 PORT=8000
 # MONGODB_URI=mongodb+srv://amrut:amrut123@cluster0.4wc3sjx.mongodb.net
 MONGODB_URI=mongodb://127.0.0.1:27017
-CORS_ORIGIN=http://localhosst:5173
+CORS_ORIGIN=http://localhost:5173
 
 ACCESS_TOKEN_SECRET=freakdevs-invoice
 ACCESS_TOKEN_EXPIRY=1d
