--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
+    "server": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
   },
   "author": "amrutgawade",
   "license": "ISC",
