--- a/client/package.json
+++ b/client/package.json
@@ -10,13 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.6.2",
-    "bootstrap": "^5.3.2",
     "invoice-number": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.18.0"
   },
   "devDependencies": {
