feat: `JWT` based authentication added for protected APIs

--- a/server/.env
+++ b/server/.env
@@ -3,7 +3,5 @@ PORT=8000
 MONGODB_URI=mongodb://127.0.0.1:27017
 CORS_ORIGIN=http://localhost:5173
 
-ACCESS_TOKEN_SECRET=freakdevs-invoice
-ACCESS_TOKEN_EXPIRY=1d
-REFRESH_TOKEN_SECRET=freakdevs-invoice
-REFRESH_TOKEN_EXPIRY=10d
+JWT_TOKEN_SECRET=freakdevs-invoice
+JWT_TOKEN_EXPIRY="2 days"
