--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.6.2",
+    "html2pdf.js": "^0.10.2",
     "invoice-number": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
